--- a/public/css/style.css
+++ b/public/css/style.css
@@ -575,13 +575,17 @@ section h3{
 .portfolio-item:hover{
     transform: scale(1.1);
 }
-.portfolio-item img{
+.project-item img {
     width: 100%;
+    height: 140px;
+    object-fit: cover;
 }
 
 
-.portfolio-feature{
+.portfolio-feature {
     width: 100%;
+    max-height: 300px;
+    object-fit: cover;
 }
 
 .projects {
@@ -798,6 +802,35 @@ ul.portfolio-tech li {
 
 .rotate {
   animation: rotation 16s infinite linear;
+}
+
+
+.pulse-animation{
+    animation: opacityfade 2s infinite;
+}
+
+@-webkit-keyframes opacityfade {
+  40% { opacity: 0.6; }
+  60% { opacity: 0.75; }
+  80% { opacity: 0.9; }
+  100% { opacity: 1; }
+}
+
+.h-140{
+    height: 140px;
+}
+.bg-grey-500{
+    background: gray;
+    opacity: 0.5;
+}
+.h-60{ height: 60px;}
+.h-20{ height: 20px;}
+.w-p-50{width: 50%;}
+.w-p-60{width: 60%;}
+.w-p-70{width: 70%;}
+.w-p-80{width: 80%;}
+.rounded-border{
+    border-radius: 5px;
 }
 
 @keyframes rotation {
@@ -1080,4 +1113,6 @@ a#scroll-down span::before {
     .git-repo-parent .col-sm-4:nth-child(3n+2) {
         margin-top: 0 !important;
     }
+
+
 }
